Fix ownCloud-specific layout issues
- The "play" icon shown after album title and podcast channel title on hover
  did not fit in on ownCloud; in multi-column view it was hidden and in
  single-column view it got dropped to the next line. The solution was to
  apply similar padding and width rules on the "details" or "more" button
  as are applied by the core on Nextcloud.

- The edge areas of the loading spinner shown after the podcast channel title
  got cut off on ownCloud.

--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,8 @@ div:hover > .play-pause,
 	background-color: transparent;
 	visibility: hidden;
 	opacity: 0.5;
+	padding: 6px 12px;
+	width: auto;
 }
 
 #app-view :hover > button.icon-details,
@@ -213,6 +215,7 @@ div:hover > .play-pause,
 #app-view h2 .icon-loading-small {
 	top: 11px;
 	left: 3px;
+	overflow: visible;
 }
 
 #app-view h2:not(.busy) .icon-loading-small {
